--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 
 :root {
     --Darkcyan: hsl(158, 36%, 37%);
+    --Verydarkcyan: hsl(157.1, 36%, 18%);
     --Cream: hsl(30, 38%, 92%);
     --Verydarkblue: hsl(212, 21%, 14%);
     --Darkgrayishblue: hsl(228, 12%, 48%);
@@ -21,6 +22,7 @@ body {
     justify-content: center;
     height: 100vh;
     width: 100%;
+    font-size: 13px;
 }
 
 .main {
@@ -53,4 +55,113 @@ body {
     padding: 35px 40px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+.category {
+    color: var(--Darkgrayishblue);
+    letter-spacing: 4px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+}
+
+h1 {
+    font-family: 'Fraunces';
+    font-size: 28px;
+    color: var(--Verydarkblue);
+}
+
+.description {
+    line-height: 1.5;
+    color: var(--Darkgrayishblue);
+    font-family: 'Montserrat';
+}
+
+.prices {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.prices-updated {
+    font-size: 28px;
+    font-family: 'Fraunces';
+    color: var(--Darkcyan);
+}
+
+.prices-previous{
+    color: var(--Darkgrayishblue);
+    text-decoration: line-through;
+    font-family: 'Fraunces';
+}
+
+.add-button {
+    width: 100%;
+    padding: 15px 0;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--Darkcyan);
+    color: var(--White);
+    font-weight: 700;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.add-button img {
+    margin-right: 12px;
+}
+
+.add-button:hover {
+    background-color: var(--Verydarkcyan);
+}
+
+@media only screen and (min-width: 641px) and (max-width: 770px) {
+    .card{max-width: 600px;}
+}
+
+@media only screen and (max-width:640px) {
+
+    .card{
+        min-width: auto;
+        width: 90%;
+        height: 95vh;
+        display: flex;
+        flex-direction: column;
+        border-radius: 10px;
+    }
+
+    .left{
+        width: 100%;
+        height: 350px;
+        background-position:top;
+        background-size:cover;
+        background-image: url(images/image-product-mobile.jpg);
+        border-radius: 10px 10px 0 0;
+    }
+
+    .right{
+        width: 90%;
+        row-gap: 12px;
+        padding: 25px;
+        border-radius: 0 0 10px 10px;
+    }
+
+    h1 {
+        font-size: 38px;
+        line-height: 1;
+    }
+
+    .description{
+        width: 95%;
+        font-size: 16px;
+        margin-top: 8px;
+        margin-bottom: 15px;
+        line-height: 1.7;
+    }
+
+    .add-button{margin: 10px;}
+
 }
